diesel_compile_tests/tests/fail/any_is_only_selectable_if_inner_expr_is_selectable.rs
extern crate diesel;

use diesel::dsl::*;
use diesel::*;

table! {
    stuff {
        id -> Integer,
        name -> VarChar,
    }
}

table! {
    more_stuff (names) {
        names -> Array<VarChar>,
    }
}

#[derive(Queryable)]
struct Stuff {
    id: i32,
    name: String,
}

fn main() {
    use self::stuff::dsl::*;

    let mut conn = PgConnection::establish("").unwrap();

    let _ = stuff.filter(name.eq(any(more_stuff::names)))
        .load(&mut conn);
}
